Product page (slider, sizes)

--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -58,7 +58,7 @@ html {
   font-size: 14px;
 }
 body {
-  background-color: #f7f8fc;
+  background-color: white;
 }
 main {
   min-height: 50vh;
@@ -261,10 +261,10 @@ svg {
 }
 .slick-list {
   position: relative;
+  overflow: hidden;
   display: block;
-  max-width: 1080px;
-  padding: 50px 0 110px 0;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
 }
 .slick-list:focus {
   outline: none;
@@ -272,16 +272,6 @@ svg {
 .slick-list.dragging {
   cursor: pointer;
   cursor: hand;
-}
-@media (max-width: 1160px) {
-  .slick-list {
-    max-width: 700px;
-  }
-}
-@media (max-width: 775px) {
-  .slick-list {
-    max-width: 305px !important;
-  }
 }
 .slick-slider .slick-track,
 .slick-slider .slick-list {
@@ -291,8 +281,7 @@ svg {
   position: relative;
   left: 0;
   top: 0;
-  display: flex;
-  align-items: center;
+  display: block;
   margin-left: auto;
   margin-right: auto;
 }
@@ -434,6 +423,7 @@ svg {
   top: -75.5px;
   transition: transform 0.3s ease, top 0.3s ease;
   z-index: 100;
+  border-bottom: 1px solid #f2f2f2;
 }
 #section_header .desktop {
   padding: 20px 10px;
@@ -947,7 +937,7 @@ svg {
   bottom: 0;
   background-color: white;
   overflow-y: auto;
-  z-index: 1;
+  z-index: 5;
 }
 #section_search .top-bar {
   width: 100%;
@@ -1235,68 +1225,218 @@ svg {
   grid-template-columns: 1fr 0.8fr;
   grid-gap: 40px;
 }
-#template_shop_product .top .images .main-image {
-  border: 1px solid #d7d7d7;
+#template_shop_product .top .left {
+  overflow: hidden;
 }
-#template_shop_product .top .images .main-image > div {
+#template_shop_product .top .left .frame {
+  position: relative;
+}
+#template_shop_product .top .left .frame .arrow-nav {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+}
+#template_shop_product .top .left .frame .arrow-nav .arrow {
+  padding: 15px 8px;
+  cursor: pointer;
+  background-color: black;
+  opacity: 0.4;
+  transition: opacity 0.1s ease-in-out;
+}
+#template_shop_product .top .left .frame .arrow-nav .arrow svg {
+  width: 20px;
+  fill: white;
+}
+#template_shop_product .top .left .frame .arrow-nav .arrow:hover {
+  opacity: 0.7;
+}
+#template_shop_product .top .left .frame .arrow-nav:first-child {
+  left: 0px;
+}
+#template_shop_product .top .left .frame .arrow-nav:last-child {
+  right: 0px;
+}
+#template_shop_product .top .left .frame .slick-slider {
+  z-index: 0;
+}
+#template_shop_product .top .left .frame .image {
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
+  height: 475px;
 }
-#template_shop_product .top .text > .vendor {
+#template_shop_product .top .left .slider-navigation {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 15px;
+  padding: 0 0px;
+  margin-top: 13px;
+}
+#template_shop_product .top .left .slider-navigation > li {
+  transition: opacity 0.15s ease-in-out;
+  opacity: 0.6;
+}
+#template_shop_product .top .left .slider-navigation > li.slick-active {
+  opacity: 1;
+}
+#template_shop_product .top .left .slider-navigation .mini-image {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 84px;
+  cursor: pointer;
+}
+#template_shop_product .top .right > .vendor {
   text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#template_shop_product .top .right > .vendor span {
+  font-weight: 500;
   font-size: 2rem;
   letter-spacing: 0.1rem;
-  font-weight: 500;
 }
-#template_shop_product .top .text h2 {
+#template_shop_product .top .right > .vendor .price-wrapper {
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+}
+#template_shop_product .top .right > .vendor .price-wrapper .price:after,
+#template_shop_product .top .right > .vendor .price-wrapper .compare-at-price:after {
+  content: '\20BD';
+  margin-left: 5px;
+}
+#template_shop_product .top .right > .vendor .price-wrapper .price {
+  font-weight: 500;
+  color: black;
+}
+#template_shop_product .top .right > .vendor .price-wrapper .compare-at-price {
+  font-weight: 500;
+  margin-left: 20px;
+  color: #949597;
+  position: relative;
+  text-decoration: line-through;
+}
+#template_shop_product .top .right h2 {
   font-weight: 400;
   font-size: 1.6rem;
   color: rgba(0, 0, 0, 0.8);
 }
-#template_shop_product .top .text .info {
+#template_shop_product .top .right .info {
   display: flex;
   align-items: center;
   color: #9d9d9d;
   margin-top: 20px;
 }
-#template_shop_product .top .text .info .in-stock {
+#template_shop_product .top .right .info .in-stock {
   background-color: #41d651;
   color: white;
   padding: 3px 10px;
   margin-left: 20px;
   border-radius: 3px;
 }
-#template_shop_product .top .text .price-wrapper {
-  display: flex;
-  align-items: center;
-  margin-top: 15px;
-  font-size: 2.5rem;
+#template_shop_product .top .right .sizes-wrapper {
+  margin-top: 50px;
 }
-#template_shop_product .top .text .price-wrapper .price {
-  font-weight: 500;
-  color: black;
+#template_shop_product .top .right .sizes-wrapper .size-list {
+  margin-top: 5px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  max-width: 430px;
 }
-#template_shop_product .top .text .price-wrapper .compare-at-price {
-  font-weight: 500;
-  margin-left: 20px;
-  color: #949597;
+#template_shop_product .top .right .sizes-wrapper .size-list .size-item {
   position: relative;
 }
-#template_shop_product .top .text .price-wrapper .compare-at-price .strike {
+#template_shop_product .top .right .sizes-wrapper .size-list .size-item label {
+  display: block;
+  background-color: white;
+  text-align: center;
+  border-bottom: 1px solid #d0d0d0;
+  border-right: 1px solid #d0d0d0;
+  padding: 12px 0px;
+  cursor: pointer;
+}
+#template_shop_product .top .right .sizes-wrapper .size-list .size-item label:hover + .tip {
+  transform: translateY(0);
+  opacity: 1;
+}
+#template_shop_product .top .right .sizes-wrapper .size-list .size-item:nth-child(-n + 5) label {
+  border-top: 1px solid #d0d0d0;
+}
+#template_shop_product .top .right .sizes-wrapper .size-list .size-item:nth-child(5n + 1) label {
+  border-left: 1px solid #d0d0d0;
+}
+#template_shop_product .top .right .sizes-wrapper .size-list .size-item .tip {
   position: absolute;
-  left: 0;
+  bottom: calc(100% + 20px);
+  background: black;
+  color: white;
+  box-shadow: 0 0px 11px -1px rgba(0, 0, 0, 0.1);
+  white-space: nowrap;
+  padding: 8px 15px;
   right: 0;
-  height: 2px;
-  background-color: #949597;
-  top: 22px;
+  pointer-events: none;
+  opacity: 0;
+  transform: translateY(-5px);
+  transition: all 0.1s ease-in-out;
 }
-#template_shop_product .top .text .price-wrapper .rub {
-  font-size: 2.4rem;
-  margin-left: 5px;
+#template_shop_product .top .right .sizes-wrapper .size-list .size-item .tip:before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid black;
+  top: 100%;
+  right: 20px;
 }
-#template_shop_product .top .text .parameter-list {
+#template_shop_product .top .right .sizes-wrapper .size-list .size-item input {
+  display: none;
+}
+#template_shop_product .top .right .sizes-wrapper .size-list .size-item input:checked ~ .tip {
+  opacity: 0 !important;
+  transform: translateY(-5px) !important;
+}
+#template_shop_product .top .right .sizes-wrapper .size-list .size-item input:checked + label {
+  background-color: #7122e3;
+  color: white;
+  font-weight: 400;
+}
+#template_shop_product .top .right .sizes-wrapper .size-list .size-item input:disabled + label {
+  color: gray;
+}
+#template_shop_product .top .right .sizes-wrapper .size-list .size-item[instock="1"] label {
+  color: #ff5e00;
+  font-weight: 400;
+}
+#template_shop_product .top .right .buttons {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 30px;
+  margin-top: 50px;
+}
+#template_shop_product .top .right .buttons .btn {
+  width: 100%;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  padding: 14px 0;
+  letter-spacing: 0.1rem;
+}
+#template_shop_product .top .right .buttons .btn.add-to-cart {
+  background-color: red;
+}
+#template_shop_product .top .right .parameter-list {
   margin-top: 40px;
+}
+#template_shop_product .bottom {
+  margin-top: 80px;
 }
 #template_badbrowser {
   background-color: black;
