--- a/resources/less/sections/header.less
+++ b/resources/less/sections/header.less
@@ -4,6 +4,7 @@
 	top: -75.5px;
 	transition: transform .3s ease, top .3s ease;
 	z-index: 100;
+	border-bottom: 1px solid #f2f2f2;
 
 	@import "../snippets/header.desktop.less";
 	@import "../snippets/header.mobile.less";
