--- a/resources/less/theme/reset.less
+++ b/resources/less/theme/reset.less
@@ -16,7 +16,8 @@ html {
 	font-size: 14px;
 }
 body {
-	background-color: #f7f8fc;
+	//background-color: #f2f2f2;
+	background-color: white;
 }
 main {
 	min-height: 50vh;	
