--- a/resources/less/templates/shop.product.less
+++ b/resources/less/templates/shop.product.less
@@ -7,23 +7,118 @@
 		grid-template-columns: 1fr .8fr;
 		grid-gap: 40px;
 
-		.images {
-			.main-image {
-				border: 1px solid #d7d7d7;
+		.left {
+			overflow: hidden;
 
-				& > div {
+			.frame {
+				// border: 1px solid #d7d7d7;
+				position: relative;
+
+				.arrow-nav {
+					position: absolute;
+					top: 0;
+					bottom: 0;
+					z-index: 1;
+					display: flex;
+					align-items: center;
+
+					.arrow {
+						padding: 15px 8px;
+						cursor: pointer;
+						background-color: black;
+						opacity: .4;
+						transition: opacity .1s ease-in-out;
+
+						svg {
+							width: 20px;
+							fill: white;
+						}
+						&:hover {
+							opacity: .7;
+						}
+					}
+
+					&:first-child {
+						left: 0px;
+					}
+					&:last-child {
+						right: 0px;
+					}
+				}
+
+				.slick-slider {
+					z-index: 0;
+				}
+
+				.image {
 					background-position: center;
-					background-size: contain;
+					background-size: cover;
 					background-repeat: no-repeat;
+					height: 475px;
+					//height: 100%;
+				}
+			}
+			.slider-navigation {
+				display: grid;
+				grid-template-columns: repeat(5, 1fr);
+				grid-gap: 15px;
+				padding: 0 0px;
+				margin-top: 13px;
+
+				& > li {
+					transition: opacity .15s ease-in-out;
+					opacity: .6;
+
+					&.slick-active {
+						opacity: 1;
+					}
+				}
+
+				.mini-image {
+					background-position: center;
+					background-size: cover;
+					background-repeat: no-repeat;
+					height: 84px;
+					cursor: pointer;
 				}
 			}
 		}
-		.text {
+		.right {
 			& > .vendor {
 				text-transform: uppercase;
-				font-size: 2rem;
-				letter-spacing: 0.1rem;
-				font-weight: 500;
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+
+				span {
+					font-weight: 500;
+					font-size: 2rem;
+					letter-spacing: 0.1rem;
+				}
+				.price-wrapper {
+					display: flex;
+					align-items: center;
+					font-size: 1.5rem;
+
+					.price, .compare-at-price {
+						&:after {
+							content: '₽';
+							margin-left: 5px;
+						}
+					}
+
+					.price {
+						font-weight: 500;
+						color: black;
+					}
+					.compare-at-price {
+						font-weight: 500;
+						margin-left: 20px;
+						color: #949597;
+						position: relative;
+						text-decoration: line-through;
+					}
+				}
 			}
 			h2 {
 				font-weight: 400;
@@ -44,39 +139,120 @@
 					border-radius: 3px;
 				}
 			}
-			.price-wrapper {
-				display: flex;
-				align-items: center;
-				margin-top: 15px;
-				font-size: 2.5rem;
 
-				.price {
-					font-weight: 500;
-					color: black;
+			.sizes-wrapper {
+				margin-top: 50px;
+
+				.title {
+
 				}
-				.compare-at-price {
-					font-weight: 500;
-					margin-left: 20px;
-					color: #949597;
-					position: relative;
 
-					.strike {
-						position: absolute;
-						left: 0;
-						right: 0;
-						height: 2px;
-						background-color: #949597;
-						top: 22px;
+				.size-list {
+					margin-top: 5px;
+					display: grid;
+					grid-template-columns: repeat(5, 1fr);
+					max-width: 430px;
+
+					.size-item {
+						position: relative;
+
+						label {
+							display: block;
+							background-color: white;
+							text-align: center;
+							border-bottom: 1px solid #d0d0d0;
+							border-right: 1px solid #d0d0d0;
+							padding: 12px 0px;
+							cursor: pointer;
+
+							&:hover + .tip {
+								transform: translateY(0);
+								opacity: 1;
+							}
+						}
+						&:nth-child(-n + 5) label {
+							border-top: 1px solid #d0d0d0;
+						}
+						&:nth-child(5n + 1) label {
+							border-left: 1px solid #d0d0d0;
+						}
+						.tip {
+							position: absolute;
+							bottom: calc(100% + 20px);
+							background: black;
+							color: white;
+							box-shadow: 0 0px 11px -1px rgba(0,0,0,0.1);
+							white-space: nowrap;
+							padding: 8px 15px;
+							right: 0;
+							pointer-events: none;
+							opacity: 0;
+							transform: translateY(-5px);
+							transition: all .1s ease-in-out;
+
+							&:before {
+								content: '';
+								display: block;
+								position: absolute;
+								width: 0; 
+								height: 0;
+								border-left: 10px solid transparent;
+								border-right: 10px solid transparent;
+								border-top: 10px solid black;
+								top: 100%;
+								right: 20px;
+							}
+						}
+						input {
+							display: none;
+						}
+						input:checked ~ .tip {
+							opacity: 0 !important;
+							transform: translateY(-5px) !important;
+						}
+						input:checked + label {
+							background-color: #7122e3;
+							color: white;
+							font-weight: 400;
+						}
+						input:disabled + label {
+							color: gray;
+						}
+						&[instock="1"] label {
+							color: #ff5e00;
+							font-weight: 400;
+						}
 					}
 				}
-				.rub {
-					font-size: 2.4rem;
-					margin-left: 5px;
+			}
+			.buttons {
+				display: grid;
+				grid-template-columns: 1fr 1fr;
+				grid-gap: 30px;
+				margin-top: 50px;
+
+				.btn {
+					width: 100%;
+					font-weight: 400;
+					text-transform: uppercase;
+					font-size: 1.2rem;
+					padding: 14px 0;
+					letter-spacing: .1rem;
+
+					&.buy {
+
+					}
+					&.add-to-cart {
+						background-color: red;
+					}
 				}
 			}
 			.parameter-list {
 				margin-top: 40px;
 			}
 		}
+	}
+	.bottom {
+		margin-top: 80px;
 	}
 }
