--- a/resources/less/theme/__slick.less
+++ b/resources/less/theme/__slick.less
@@ -16,10 +16,10 @@
 }
 .slick-list {
 	position: relative;
-	overflow: hidden;
 	display: block;
-	margin: 0;
-	padding: 0;
+	max-width: 1080px;
+	padding: 50px 0 110px 0;
+	margin: 0 auto;
 
 	&:focus {
 		outline: none;
@@ -29,7 +29,14 @@
 		cursor: pointer;
 		cursor: hand;
 	}
+	@media (max-width: 1160px) {
+		max-width: 700px;
+	}
+	@media (max-width: 775px) {
+		max-width: 305px !important;
+	}
 }
+
 .slick-slider .slick-track,
 .slick-slider .slick-list {
 	-webkit-transform: translate3d(0, 0, 0);
@@ -43,7 +50,8 @@
 	position: relative;
 	left: 0;
 	top: 0;
-	display: block;
+	display: flex;
+	align-items: center;
 	margin-left: auto;
 	margin-right: auto;
 
@@ -65,8 +73,6 @@
 	float: left;
 	height: 100%;
 	min-height: 1px;
-	//padding: 0 5px;
-
 	[dir="rtl"] & {
 		float: right;
 	}
