Design breadcrumb and add colors. Minor bugfixes

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -4,10 +4,12 @@
 @import "theme/slick.less";
 @import "theme/button.less";
 @import "theme/field.less";
+@import "theme/breadcrumb.less";
 
 
 @import "sections/header.less";
 @import "sections/welcome.less";
+@import "sections/collections.less";
 @import "sections/search.less";
 
 
